# UTide

./: .appveyor.yml  .doctr-files  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  github_deploy_key_ocefpaf_utide.enc  github_deploy_key_wesleybowman_utide.enc  index.html  masterRec.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  strategy.html  usage.html  ut_FUV.py  ut_cnstitsel.py  ut_constants.mat  ut_reconstr.py  ut_solv.py  ut_solv1.py
.github/workflows/: deploy-docs.yml  pre-commit.yml  publish.yml  pypi.yml  tarball-tests.yml  tests.yml
_modules/: index.html
_modules/utide/: _reconstruct.html  _solve.html  periodogram.html  robustfit.html  utilities.html
dev/: .doctr-files  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strategy.html  usage.html
dev/_modules/: index.html
dev/_modules/utide/: _reconstruct.html  _solve.html  periodogram.html  robustfit.html  utilities.html
dev/_sources/: usage.rst.txt
dev/_sources/internals/: periodogram.rst.txt  robustfit.rst.txt
dev/_static/: documentation_options.js
dev/internals/: index.html  periodogram.html  robustfit.html
doc/: Makefile  conf.py  index.rst  strategy.rst
doc/internals/: index.rst  robustfit.rst
docs/: conf.py  index.md  index.rst  strategy.md  strategy.rst  usage.md  usage.rst
docs/internals/: index.md  index.rst  periodogram.md  robustfit.md
internals/: index.html  periodogram.html  robustfit.html
notebooks/: can1998.dtf  utide_real_data_example.ipynb  utide_uv_example.ipynb
tests/: test_HNL.py  test_astron.py  test_harmonics.py  test_normalize.py  test_order_constit.py  test_periodogram.py  test_solve.py  test_uv.py
tests/data/: HNL2010.asc  HNL2010.m  HNL2010.mat  HNL2010_Jan.mat  HNL2010_Jan_week1.mat  HNL2010_Jan_week1_infer_S2.mat
ut_constants/: __init__.py  ut_E.py  ut_FUV.py  ut_astron.py  ut_cnstitsel.py  ut_cs2cep.py
ut_reconstr/: __init__.py  ut_rcninit.py  ut_reconstr1.py
ut_solv/: __init__.py  ut_slvinit.py  ut_solv.py  ut_solv1.py
utide/: __init__.py  _reconstruct.py  _solve.py  _time_conversion.py  _ut_constants.py  _version.py  astronomy.py  comparison.py  confidence.py  constituent_selection.py  diagnostics.py  ellipse_params.py  harmonics.py  master.py  masterRec.py  periodogram.py  robustfit.py  simple_test.py  simple_utide_test.py  ut_E.py  ut_FUV.py  ut_astron.py  ut_cnstitsel.py  ut_confidence.py  ut_cs2cep.py  ut_diagn.py  ut_fbndavg.py  ut_linci.py  ut_lmbscga.py  ut_pdgm.py  ut_rcninit.py  ut_reconstr.py  ut_reconstr1.py  ut_slvinit.py  ut_solv.py  ut_solv1.py  utilities.py
utide/data/: FUV0.mat  FUV0.npz  make_FUV_data.py  mat2npz.py  ut_constants.npz
utide/data_generation/: make_FUV_data.py
utide/test/: B.mat  B.p  GridTest.sh  Utide_test.py  comparison.py  elevCoef.mat  elevCoef.p  elevation.py  grid_test.py  keywords.py  matlabcoef.mat  matlabrecon.mat  pyMatTest.sh  pythoncoef.p  pythonrecon.p  reconCompare.py  speed.py  speedCoef.mat  speedCoef.p  speedmatlabcoef.mat  speedmatlabrecon.mat  speedpythoncoef.p  speedpythonrecon.p  station_test.py  utestcoef.p  xraw.p
utide/test/UTideCurrentVersion/: TESTROBUST.m  Utide_test.m  Utide_test.m~  grid_test.m  grid_test.m~  station_test.m  station_test.m~  ut_reconstr.m  ut_solv.m  ut_solv.m~
utide/tests/: test_astron.py  test_harmonics.py  test_periodogram.py  test_solve.py
version-v0.2.3/: .doctr-files  genindex.html  py-modindex.html  strategy.html
version-v0.2.3/_modules/utide/: _reconstruct.html  robustfit.html  utilities.html
version-v0.2.3/internals/: index.html  robustfit.html
version-v0.2.4/: .doctr-files  genindex.html  objects.inv  searchindex.js
version-v0.2.4/_modules/: index.html
version-v0.2.4/_modules/utide/: _reconstruct.html  _solve.html
version-v0.2.4/_sources/: index.rst.txt
version-v0.2.4/internals/: index.html  periodogram.html  robustfit.html
version-v0.2.5/: .doctr-files  genindex.html  index.html  objects.inv  strategy.html  usage.html
version-v0.2.5/_modules/utide/: robustfit.html  utilities.html
version-v0.2.5/_sources/: strategy.rst.txt
