[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
  "wheel",
]

[project]
name = "utide"
description = "Python distribution of the MatLab package UTide"
license = {text = "MIT"}
authors = [
    {name = "Wesley Bowman", email = "wesley.bowman23@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = [
  "dependencies",
  "readme",
  "version",
]
[project.urls]
documentation = "https://wesleybowman.github.io/UTide"
homepage = "https://github.com/wesleybowman/UTide"
repository = "https://github.com/wesleybowman/UTide"

[tool.setuptools]
license-files = ["LICENSE.txt"]
packages = ["utide"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "utide/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodecstyle
    "F", # flakes
    "I", # import sorting
    "UP", # upgrade
]
target-version = "py38"
line-length = 110

[tool.ruff.per-file-ignores]
"docs/conf.py" = [
  "E401",
  "E402",
]

[tool.check-manifest]
ignore = [
    "*.yml",
    "utide/data/*.mat",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]
