[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "utide"
description = "Python distribution of the MatLab package UTide"
license = { text = "MIT" }
authors = [
  { name = "Wesley Bowman", email = "wesley.bowman23@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "dependencies",
  "readme",
  "version",
]
urls.documentation = "https://wesleybowman.github.io/UTide"
urls.homepage = "https://github.com/wesleybowman/UTide"
urls.repository = "https://github.com/wesleybowman/UTide"

[tool.setuptools]
license-files = [ "LICENSE.txt" ]
packages = [ "utide" ]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = { file = [ "requirements.txt" ] }

[tool.setuptools_scm]
write_to = "utide/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
target-version = "py39"
line-length = 110

lint.select = [
  "A",  # flake8-builtins
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "E",  # pycodestyle
  "F",  # flakes
  "I",  # import sorting
  "UP", # upgrade
]
lint.per-file-ignores."docs/conf.py" = [
  "E401",
  "E402",
]

[tool.check-manifest]
ignore = [
  "*.yml",
  "utide/data/*.mat",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]
