[metadata]
name = UTide
description = Python distribution of the MatLab package UTide
author = Wesley Bowman
author_email = wesley.bowman23@gmail.com
url = https://github.com/wesleybowman/UTide
long_description_content_type = text/x-rst
long_description = file: README.rst
license = MIT
license_file = LICENSE.txt
keywords = oceanography tides
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Education

[options]
install_requires =
    scipy
    numpy
python_requires = >=3.6
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* =
  data/*.npz

[sdist]
formats = gztar

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    E741,E226,W504
    docs/* ALL

[check-manifest]
ignore =
    *.yml
    utide/data/*.mat
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*
