# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = utide/_version.py
versionfile_build = utide/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    E741,E226,W504
    docs/* ALL
    versioneer.py ALL
    utide/_version.py ALL

[metadata]
description-file = README.rst
license_file = LICENSE.txt